add personal settings

--- a/templates/base.html
+++ b/templates/base.html
@@ -124,7 +124,7 @@
                         <ul class="treeview-menu" style="display: none;">
                             <li><a href='{% url "upload_text" %}'><i class="fa fa-upload"></i> 上傳文本</a></li>
                             <li><a href='{% url "paste_text" %}'><i class="fa fa-paste"></i> 貼上文本</a></li>
-                            <li><a href="#"><i class="fa fa-cog"></i> 設定</a></li>
+                            <li><a href='{% url "personal_settings" %}'><i class="fa fa-cog"></i> 標籤設定</a></li>
                         </ul>
                     </li>
                     <li>
