--- a/annotator/templates/senti_main.html
+++ b/annotator/templates/senti_main.html
@@ -36,6 +36,7 @@
     <br>
     <br>
     <div id="tag-panel-wrapper"></div>
+    <div id="hb-tag_settings"></div>
     <div class="row _main">
         <div class="col-md-6">
             <div class="row">
