--- a/templates/personal_settings.html
+++ b/templates/personal_settings.html
@@ -3,24 +3,7 @@
 
 {% block main_content %}
 	<div class="row">
-		<div class="col-lg-6">
-			<div class="box box-default">
-				<div class="box-header with-border">
-					<h3 class="box-title">類別</h3>
-					<div class="box-tools pull-right">
-						<button type="button" class="btn btn-box-tool" data-widget="collapse">
-							<i class="fa fa-minus"></i>
-						</button>
-					</div>
-				</div>
-				<div class="box-body box-tag">
-					<a class="label label-default">標籤</a>
-					<a class="label label-default">標籤</a>
-					<a class="label label-default">標籤</a>
-					<a class="label label-default label-tag-plus"><i class="fa fa-plus"></i></a>
-				</div>    
-			</div>
-		</div>
+		<div id="hb-tag_settings"></div>
 	</div>
 
 	<div class="pull-right">
@@ -34,6 +17,31 @@
 			<li><a src="#" class="">更改文字</a></li>
 		</ul>
 	</div>
+
+	{% verbatim %}
+	    <script id="template-tag_settings" type="text/x-handlebars-template">
+		    {{#each objects}}
+				<div class="col-lg-12">
+					<div class="box box-default">
+						<div class="box-header with-border">
+							<h3 class="box-title">{{this.cat}}</h3>
+							<div class="box-tools pull-right">
+								<button type="button" class="btn btn-box-tool" data-widget="collapse">
+									<i class="fa fa-minus"></i>
+								</button>
+							</div>
+						</div>
+						<div class="box-body box-tag">
+							{{#each this.tags}}
+								<a id="{{this.[0]}}" class="label label-default" style="background-color:{{this.[2]}}">{{this.[1]}}</a>
+							{{/each}}
+							<a class="label label-default label-tag-plus"><i class="fa fa-plus"></i></a>
+						</div>    
+					</div>
+				</div>
+			{{/each}}
+	    </script>
+	{% endverbatim %}
 
 {% endblock main_content %}
 
@@ -58,6 +66,7 @@
 
 
 {% block extra_js %}
+	<script src="{% static 'js/handlebars-v3.0.0.js' %}"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap3-dialog/1.34.6/js/bootstrap-dialog.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-contextmenu/0.3.3/bootstrap-contextmenu.min.js"></script>
 	<script src='{% static "colorpicker/js/bootstrap-colorpicker.min.js" %}'></script>
@@ -99,15 +108,23 @@
 		    })
 	    }
 		// color picker
-	    $('.label:not(".label-tag-plus")').colorpicker().on('changeColor', function(ev) {
-			color = ev.color.toHex();
-			$(this).css('background-color', color)
-	    });
+		function initColorpicker() {		
+		    $('.label:not(".label-tag-plus")').colorpicker().on('changeColor', function(ev) {
+				color = ev.color.toHex();
+				$(this).css('background-color', color)
+		    });
+		};
+
+		// render tag_settings
+		var source = $('#template-tag_settings').html();
+		var template = Handlebars.compile(source);
+		$('#hb-tag_settings').html(template({objects: {{tag_settings|safe}}}));
 
 	    // add tag
 	    $('.label-tag-plus').click(function() {
-	    	$('<a class="label label-default">標籤</a>').insertBefore($(this));
+	    	$('<a class="label label-default">標籤</a>').uniqueId().insertBefore($(this));
 	    	initContextMenu();
+	    	initColorpicker();
 	    });
 
 	    // save personal settings
@@ -118,17 +135,22 @@
 	    		tags = $(this).find('.label:not(".label-tag-plus")');
 	    		con = [];
 	    		$(tags).each(function() {
+	    			uid = $(this).attr('id');
 	    			tag = $(this).text();
 	    			color = $(this).css('background-color');
-	    			con.push([tag, color]);
+	    			con.push([uid, tag, color]);
 	    		});
 		    	box_con.push({cat: cat, tags: con})
 	    	});
-	    	output = JSON.stringify(box_con);
-	    	alert(output);
+	    	tag_settings = JSON.stringify(box_con);
+	    	postData = {command: 'update_tag_settings', tag_settings: tag_settings};
+	    	$.post('{%url "controls" %}', postData, function(resp){
+	    		location.reload();
+	    	});
 	    });
 
 	    // initiate contextmenu
 	    initContextMenu();
+	    initColorpicker();
 	</script>
 {% endblock extra_js %}
