--- a/annotator/templates/ref.html
+++ b/annotator/templates/ref.html
@@ -1,43 +1,21 @@
 {% verbatim %}
-
+    {# template for "category box" #}
     <script id="cat-template" type="text/x-handlebars-template">
             {{#each objects}}
-                <div class="cat" id="cat-{{@index}}" style="background:{{this.[1]}}">
-                    <h4 style="text-align:center;">{{this.[0]}}</h4>
+                <div class="cat" id="cat-{{@index}}" style="background:{{this.[2]}}">
+                    <h4 style="text-align:center;">{{this.[1]}}</h4>
                 </div>
             {{/each}}
     </script>
 
+    {# template for pop up options #}
     <script id="opt-template" type="text/x-handlebars-template">
         {{#each objects}}
-            <button class="btn btn-lg box" style="background:{{this.[1]}}" data-val={{@index}}>{{this.[0]}}</button>
+            <button class="btn btn-lg box" style="background:{{this.[2]}}" data-val={{@index}}>{{this.[1]}}</button>
         {{/each}}
     </script>
 
-    <script id="tag-panel" type="text/x-handlebars-template">
-        <div class="panel panel-default" data-intro="可自定義的項目">
-            <div class="panel-body">
-                標記設定
-            </div>
-            <div class="panel-footer">
-                <div class="btn-group">
-                    {{#each this}}
-                        <button type="button" class="btn btn-default tag-type">{{@key}}</button>
-                    {{/each}}
-                </div>
-            </div>
-            {{#each this}}
-                <div id="{{@key}}" class="panel-footer sub-panel hide">
-                    <div class="btn-group tag-subtype">
-                        {{#each this}}
-                            <button class="btn btn-default btn-subtag">{{@key}}</button>
-                        {{/each}}
-                    </div>
-                </div>
-            {{/each}}
-        </div>
-    </script>
-
+    {# template 標記設定 #}
     <script id="template-tag_settings" type="text/x-handlebars-template">
         <div class="panel panel-default">
             <div class="panel-body">
@@ -54,42 +32,46 @@
     </script>
 
     <script>
-    tag_settings = null;
-    function get_ref(subtag) {
-        // render tag_settings
-        var source = $('#template-tag_settings').html(),
-            template = Handlebars.compile(source);
-        $.post('/lope.anno/controls/', {command: 'get_tag_settings'}, function(resp) {
-            tag_settings = JSON.parse(resp);
-            $('#hb-tag_settings').html(template({objects: tag_settings}));
+        tag_settings = null;
+        function get_ref(subtag) {
+            $.post('/lope.anno/controls/', {command: 'get_tag_settings'}, function(resp) {
+                tag_settings = JSON.parse(resp);
+
+                // render tag_settings
+                var source = $('#template-tag_settings').html(),
+                    template = Handlebars.compile(source);
+                $('#hb-tag_settings').html(template({objects: tag_settings}));
+
+                // ender template for "category box"
+                var catSource   = $("#cat-template").html(),
+                    catTemplate = Handlebars.compile(catSource),
+                    catHtml = catTemplate({objects: tag_settings[0].tags});
+                $('#cat-box').html(catHtml);
+
+                // render template for pop up options
+                var optSource   = $("#opt-template").html(),
+                    optTemplate = Handlebars.compile(optSource),
+                    optHtml = optTemplate({objects: tag_settings[0].tags});
+                $('#options').html(optHtml);
+
+                // re-bind click event for selection of tags in pop-up options
+                activateTagButton();
+                patch_cat();
+            });
+
+
+            // zoom-in functions for "category box"
+            var catZoom = '<div class="cat-zoom"><button class="btn btn-default" data-scale="0.1"><span class="glyphicon glyphicon-zoom-in"></span></button><button class="btn btn-default" data-scale="-0.1"><span class="glyphicon glyphicon-zoom-out"></span></button></div>';
+            $('.cat').first().append(catZoom);
+            
+        };
+
+        $('#cat-box').on('click', '.cat-zoom button', function() {
+            var scale = parseFloat($(this).attr('data-scale')),
+                curScale = parseFloat($('#cat-box').css('zoom'));
+
+            $('#cat-box').css('zoom', curScale+scale);
+            $('.draggable').css('z-index', -9999);
         });
-
-
-        var catSource   = $("#cat-template").html();
-        var catTemplate = Handlebars.compile(catSource);
-        var catHtml = catTemplate({objects: ref[subtag]});
-
-        var optSource   = $("#opt-template").html();
-        var optTemplate = Handlebars.compile(optSource);
-        var optHtml = optTemplate({objects: ref[subtag]});
-
-        $('#cat-box').html(catHtml);
-        $('#options').html(optHtml);
-        activateTagButton();
-        patch_cat();
-
-        var catZoom = '<div class="cat-zoom"><button class="btn btn-default" data-scale="0.1"><span class="glyphicon glyphicon-zoom-in"></span></button><button class="btn btn-default" data-scale="-0.1"><span class="glyphicon glyphicon-zoom-out"></span></button></div>'
-
-        $('.cat').first().append(catZoom);
-        
-    };
-
-    $('#cat-box').on('click', '.cat-zoom button', function() {
-        var scale = parseFloat($(this).attr('data-scale')),
-            curScale = parseFloat($('#cat-box').css('zoom'));
-
-        $('#cat-box').css('zoom', curScale+scale);
-        $('.draggable').css('z-index', -9999);
-    });
     </script>
 {% endverbatim %}
