--- a/templates/base.html
+++ b/templates/base.html
@@ -126,8 +126,8 @@
                             <i class="fa fa-wrench"></i> <span>標記系統</span> <i class="fa fa-angle-left pull-right"></i>
                         </a>
                         <ul class="treeview-menu" style="display: none;">
-                            <li class="side-active"><a href='{% url "upload_text" %}'><i class="fa fa-upload"></i> 上傳文本</a></li>
-                            <li><a href='{% url "paste_text" %}'><i class="fa fa-paste"></i> 貼上文本</a></li>
+                            <li class="side-active"><a href='{% url "upload_posts" %}'><i class="fa fa-upload"></i> 上傳文本</a></li>
+                            <li><a href='{% url "paste_post" %}'><i class="fa fa-paste"></i> 貼上文本</a></li>
                             <li><a href='{% url "personal_settings" %}'><i class="fa fa-cog"></i> 標籤設定</a></li>
                         </ul>
                     </li>
