--- a/templates/personal_settings.html
+++ b/templates/personal_settings.html
@@ -143,6 +143,7 @@
 		// add cat
 		$('#add-cat').click(function(){
 			renderTagSettigns([{cat:'類別', catid: 'cat-'+guid()}]);
+			initContextMenu();
 		});
 
 		// remove cat
