--- a/templates/base.html
+++ b/templates/base.html
@@ -171,7 +171,7 @@
             </section><!-- /.content -->
         </div><!-- /.content-wrapper -->
         <footer class="main-footer">
-             Graduate Institute of Linguistics, National Taiwan University, 2015. Build by <a href="#">Aji</a>
+             Graduate Institute of Linguistics, National Taiwan University, 2015. Build by <a href="http://ajiblog.herokuapp.com/">Aji</a>
         </footer><!-- Control Sidebar -->
         <aside class="control-sidebar control-sidebar-dark">
             <!-- Create the tabs -->
