--- a/annotator/templates/senti_main.html
+++ b/annotator/templates/senti_main.html
@@ -247,7 +247,7 @@
             postid = json.postid;
             cand_text = cand_text.replace(/>/g, '&gt;');
             cand_text = cand_text.replace(/</g, '&lt;');
-
+            cand_text = cand_text.replace('\n', '<br>');
             load_cand_text(cand_text);
             get_ref(catid);
 
